load("//tools:defaults.bzl", "ts_library", "ng_module", "ng_package")
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")

ng_module(
    name = "express-engine",
    module_name = "@nguniversal/express-engine",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    deps = [
      "@rxjs",
      # "//modules/express-engine/tokens"
     ],
)

ng_package(
    name = "@nguniversal/express-engine",
    srcs = [
      ":package.json",
      # "//modules/express-engine/tokens:package.json",
    ],
    entry_point = "index.js",
    secondary_entry_points = ["tokens"],
    deps = [
      ":express-engine_module",
      # "//modules/express-engine/tokens"
    ],
)

ts_library(
    name = "unit_test_lib",
    srcs = glob([
      "spec/**/*.spec.ts"
    ]),
    testonly=True,
    deps = [
      ":express-engine_module"
    ],
)

jasmine_node_test(
    name = "unit_test",
    srcs = [":unit_test_lib"],
)
